--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omran's Portfolio</title>
-    <link rel = "stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Omran Shareef</title>
+    <p> Computer Engineer</p>
+    <i>Iowa State University</i>
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <h1>Omran Shareef</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#resume">Resume</a>
+            <a href="#projects">Projects</a>
+            <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/omran-shareef-b11a63248/" target="_blank">LinkedIn</a>
+        </nav>
