--- a/index.html
+++ b/index.html
@@ -18,3 +18,17 @@
             <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/omran-shareef-b11a63248/" target="_blank">LinkedIn</a>
         </nav>
+    </header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            My names Omran Shareef......
+        </p>
+    </section>
+    <section id="resume">
+        <h2>Resume</h2>
+        <iframe src="https://drive.google.com/file/d/1yCWiX9YtVlik-r4bqm4mGHCYRYMKrw1J/preview" width="640" height="480" allow="autoplay"></iframe>
+    </section>
+    
+</body>
+</html>
