--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Omran Shareef</title>
 </head>
 <body>
-    <header>
+    <section class="header">
         <h1>Omran Shareef</h1>
         <p> Computer Engineer</p>
         <i>Iowa State University</i>
@@ -18,14 +18,14 @@
             <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/omran-shareef-b11a63248/" target="_blank">LinkedIn</a>
         </nav>
-    </header>
-    <section id="about">
+    </section>
+    <section class="about" id ="about">
         <h2>About Me</h2>
         <p>
-            My names Omran Shareef......
+            My name is Omran Shareef......
         </p>
     </section>
-    <section id="resume">
+    <section class="resume" id="resume">
         <h2>Resume</h2>
         <iframe src="https://drive.google.com/file/d/1yCWiX9YtVlik-r4bqm4mGHCYRYMKrw1J/preview" width="640" height="480" allow="autoplay"></iframe>
     </section>
