--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Omran Shareef</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="header">
-        <h1>Omran Shareef</h1>
-        <p> Computer Engineer</p>
-        <i>Iowa State University</i>
-        <nav>
-            <a href="#about">About Me</a>
-            <a href="#resume">Resume</a>
-            <a href="#projects">Projects</a>
-            <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/omran-shareef-b11a63248/" target="_blank">LinkedIn</a>
-        </nav>
+      <h1>Omran Shareef</h1>
+      <p>Computer Engineer</p>
+      <i>Iowa State University</i>
+      <nav>
+        <a href="#about">About Me</a>
+        <a href="#resume">Resume</a>
+        <a href="#projects">Projects</a>
+        <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
+        <a
+          href="https://www.linkedin.com/in/omran-shareef-b11a63248/"
+          target="_blank"
+          >LinkedIn</a
+        >
+      </nav>
     </section>
-    <section class="about" id ="about">
-        <h2>About Me</h2>
-        <p>
-            My name is Omran Shareef......
-        </p>
+    <section class="about" id="about">
+      <h2>About Me</h2>
+      <p>My name is Omran Shareef......</p>
     </section>
     <section class="resume" id="resume">
-        <h2>Resume</h2>
-        <iframe src="https://drive.google.com/file/d/1yCWiX9YtVlik-r4bqm4mGHCYRYMKrw1J/preview" width="640" height="480" allow="autoplay"></iframe>
+      <h2>Resume</h2>
+      <iframe
+        src="https://drive.google.com/file/d/1yCWiX9YtVlik-r4bqm4mGHCYRYMKrw1J/preview"
+        width="640"
+        height="480"
+        allow="autoplay"
+      ></iframe>
     </section>
-    
-</body>
+  </body>
 </html>
