--- a/index.html
+++ b/index.html
@@ -3,38 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Omran Shareef</title>
   </head>
   <body>
-    <section class="header">
+    <div id="header">
       <h1>Omran Shareef</h1>
-      <p>Computer Engineer</p>
-      <i>Iowa State University</i>
-      <nav>
-        <a href="#about">About Me</a>
-        <a href="#resume">Resume</a>
-        <a href="#projects">Projects</a>
-        <a href="https://github.com/o-shareef" target="_blank">GitHub</a>
-        <a
-          href="https://www.linkedin.com/in/omran-shareef-b11a63248/"
-          target="_blank"
-          >LinkedIn</a
-        >
-      </nav>
-    </section>
-    <section class="about" id="about">
+      <div id="menu">
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About me</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+    <!-- Sections -->
+    <section id="about">
       <h2>About Me</h2>
-      <p>My name is Omran Shareef......</p>
+      <p>TODO</p>
     </section>
-    <section class="resume" id="resume">
+
+    <section id="resume">
       <h2>Resume</h2>
-      <iframe
-        src="https://drive.google.com/file/d/1yCWiX9YtVlik-r4bqm4mGHCYRYMKrw1J/preview"
-        width="640"
-        height="480"
-        allow="autoplay"
-      ></iframe>
+      <p>TODO</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>TODO</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>TODO</p>
     </section>
   </body>
 </html>
