EDITED FOR CPRE 394

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#resume">Resume</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#Ethics">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -25,22 +26,35 @@
     <!-- Sections -->
     <section id="about">
       <h2>About Me</h2>
-      <p>TODO</p>
+      <p>Hello my Name is Omran Shareef I am a 2nd year Computer Engineering Student at Iowa State University,</p>
+      <p> I am currently also an Intern for Electrical Power Products for their IT department. In my frees time I really Enjoy 
+      hanging out with friends and family.</p>
     </section>
 
     <section id="resume">
       <h2>Resume</h2>
-      <p>TODO</p>
+      <iframe src= "Omran_Resume.pdf" width="800" height="800"> </iframe> 
     </section>
 
     <section id="projects">
       <h2>Projects</h2>
-      <p>TODO</p>
+      <h4>My Portfolio Website (Yes, the one you are on right now!)</h4>
+      <h5>Skills: <p1>Git, Git hub, HTML, CSS</p1></h5>
+      <p>I have not done any web development before this, I decided to build this really simple website from scratch,</p>
+      <p>I am using github to host it for free, so far I have only utilized basic raw HTML and CSS, I definetly plan on </p>
+      <p>learning about a frame work such as react soon to make it look a lot better!</p>
+    </section>
+
+    <section id="#Ethics">
+      <h2>Ethics</h2>
+      <iframe src= "CPRE 394 ethics.pdf" width="800" height="800"> </iframe> 
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>TODO</p>
+      <p>Email: Shareef@iastate.edu</p>
+      <p>Phone Number: 515-669-3664</p>
+      <p>Location: Urbandale, Iowa</p>
     </section>
   </body>
 </html>
