fixed formatting for header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#resume">Resume</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#Ethics">Contact</a></li>
+            <li><a href="#Ethics">Ethics</a></li>
           </ul>
         </nav>
       </div>
