--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#resume">Resume</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#Ethics">Ethics</a></li>
+            <li><a href="#ethics">Ethics</a></li>
           </ul>
         </nav>
       </div>
@@ -45,14 +45,14 @@
       <p>learning about a frame work such as react soon to make it look a lot better!</p>
     </section>
 
-    <section id="#Ethics">
+    <section id="ethics">
       <h2>Ethics</h2>
       <iframe src= "CPRE 394 ethics.pdf" width="800" height="800"> </iframe> 
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: Shareef@iastate.edu</p>
+      <p>Email: omranshareef101@gmail.com</p>
       <p>Phone Number: 515-669-3664</p>
       <p>Location: Urbandale, Iowa</p>
     </section>
