--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>Hello my Name is Omran Shareef I am a 2nd year Computer Engineering Student at Iowa State University,</p>
-      <p> I am currently also an Intern for Electrical Power Products for their IT department. In my frees time I really Enjoy 
+      <p> I am currently also an Intern at Electrical Power Products for their IT department. In my frees time I really Enjoy 
       hanging out with friends and family.</p>
     </section>
 
